[package]
name = "cargo-doc-viewer"
version = "0.1.0"
edition = "2024"
description = "Enhance rustdoc HTML with a richer UI and AI-assisted chat via cargo doc-enhance."
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-username/cargo-doc-viewer"
homepage = "https://github.com/your-username/cargo-doc-viewer"
readme = "README.md"
categories = ["development-tools", "development-tools::cargo-plugins"]
keywords = ["rustdoc", "documentation", "cargo", "chat"]

[dependencies]
hyper = { version = "0.14.30", features = ["full"] }
mime_guess = "2.0.5"
percent-encoding = "2.3.1"
tokio = { version = "1.47.1", features = ["fs", "macros", "rt-multi-thread"] }
tokio-util = { version = "0.7.12", features = ["io"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_yaml = "0.9.34"
once_cell = "1.20.2"
dirs = "5.0.1"
dotenvy = "0.15.7"

[[bin]]
name = "cargo-doc-viewer"
path = "src/main.rs"
